--- a/app/src/main/res/layout/activity_game_board.xml
+++ b/app/src/main/res/layout/activity_game_board.xml
@@ -3,22 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GameBoard">
+    tools:context=".GameBoard"
+    android:id="@+id/gameBoardLayout">
 
     <GridView
         android:id="@+id/GameBoard"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:columnWidth="600dp"
         android:numColumns="3"
         android:stretchMode="columnWidth"
         android:layout_gravity="center|top"
         android:scrollIndicators="none"
+        android:scrollbars="none"
         android:paddingLeft="0dp"
         android:paddingRight="0dp"
-        android:layout_marginTop="20sp"
-        android:layout_marginBottom="10sp"
-        android:fastScrollEnabled="false">
+        android:layout_marginTop="25sp"
+        android:fastScrollEnabled="false"
+        android:visibility="gone"
+        >
     </GridView>
     <LinearLayout
         android:layout_width="wrap_content"
