--- a/app/src/main/res/layout/activity_leader_board.xml
+++ b/app/src/main/res/layout/activity_leader_board.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.quarklab.squarebash.LeaderBoard"
+    tools:context="com.quarklab.volo.LeaderBoard"
     android:background="@drawable/backgblue_png">
     <LinearLayout
         android:layout_width="match_parent"
