--- a/app/src/main/res/layout/activity_square_bash.xml
+++ b/app/src/main/res/layout/activity_square_bash.xml
@@ -9,7 +9,7 @@
     android:rowCount="12"
     android:background="#ffffff"
     android:layout_centerInParent="true"
-    tools:context="com.quarklab.squarebash.SquareBash"
+    tools:context="com.quarklab.volo.SquareBash"
     android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
@@ -151,32 +151,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        >
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/quarklab"
-            android:id="@+id/textView2"
-            android:layout_row="7"
-            android:layout_column="1"
-            android:layout_gravity="center"
-            android:layout_rowSpan="5" />
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            />
-    </LinearLayout>
 
 </LinearLayout>
 
