--- a/app/src/main/res/layout/activity_game_board.xml
+++ b/app/src/main/res/layout/activity_game_board.xml
@@ -40,35 +40,35 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="4"
+            android:drawableRight="@drawable/glossy_heart"
             android:id="@+id/lifes"
-            android:layout_gravity="center|right"
+            android:background="@drawable/textview"
+            android:padding="@dimen/_5sdp"
+            android:drawablePadding="@dimen/_5sdp"
+            android:layoutDirection="rtl"
+            android:gravity="center"
             android:editable="false"
             android:textColor="#000" />
-        <ImageView
-            android:layout_width="20sp"
-            android:layout_height="20sp"
-            android:id="@+id/heart"
-            android:background="@drawable/heart"
-            android:layout_marginRight="@dimen/_10sdp"
-            android:layout_marginLeft="5sp"
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:background="@drawable/textview"
+            android:padding="@dimen/_5sdp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
             android:id="@+id/score"
-            android:layout_gravity="center|right"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:drawablePadding="@dimen/_5sdp"
+            android:layoutDirection="rtl"
             android:editable="false"
             android:textColor="#000" />
-        <ImageView
-            android:layout_width="20sp"
-            android:layout_height="20sp"
-            android:background="@drawable/coin"
-            android:layout_marginLeft="5sp"
-            />
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
