--- a/app/src/main/res/layout/activity_leader_board.xml
+++ b/app/src/main/res/layout/activity_leader_board.xml
@@ -10,6 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginLeft="@dimen/_20sdp"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         >
@@ -28,7 +30,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginLeft="20sp"
+            android:layout_marginLeft="@dimen/_20sdp"
             android:layout_marginTop="5dp"/>
 
     </LinearLayout>
@@ -39,7 +41,7 @@
         android:layout_alignParentTop="true"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="@dimen/_60sdp"
         android:layout_centerHorizontal="true" />
     <!--<com.mopub.mobileads.MoPubView-->
         <!--android:id="@+id/adviewMopub"-->
