--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,9 +7,10 @@
         android:padding="10sp"
         android:layout_width="match_parent"
         android:layout_marginBottom="5sp"
-        android:background="#FFFFFF"
+        android:background="@drawable/leaderboard_row"
         android:showDividers="none"
-        android:elevation="2sp"
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:layout_marginRight="@dimen/_10sdp"
         >
         <com.facebook.login.widget.ProfilePictureView
             android:id="@+id/image"
@@ -17,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             facebook:com_facebook_preset_size ="small"
+            android:layout_marginLeft="@dimen/_5sdp"
             android:padding="5dp"
             />
         <LinearLayout android:layout_width="wrap_content"
@@ -28,6 +30,11 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:layout_marginLeft="10sp"
+                android:textColor="#FFF"
+                android:shadowColor="#2f2f2f"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="1"
                 android:padding="2dp"/>
             <View
                 android:layout_width="0dp"
@@ -39,6 +46,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
+                android:textColor="#FFF"
+                android:shadowColor="#2f2f2f"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="1"
                 android:layout_marginLeft="11sp"/>
         </LinearLayout>
         <View
@@ -59,6 +71,7 @@
                 android:layout_height="35sp"
                 android:layout_marginTop="5sp"
                 android:layout_marginLeft="10sp"
+                android:layout_marginRight="@dimen/_5sdp"
                 android:id="@+id/trophy"
                 />
             <View
@@ -67,6 +80,5 @@
                 android:layout_weight="1"
                 />
         </LinearLayout>
-
     </TableRow>
 </TableLayout>
