--- a/app/src/main/res/drawable/play_button_selected.xml
+++ b/app/src/main/res/drawable/play_button_selected.xml
@@ -4,7 +4,7 @@
     <item >
         <shape android:shape="rectangle" >
             <corners android:radius="@dimen/button_inner_radius" />
-            <solid android:color="#2e4053" />
+            <solid android:color="@color/darkNavy" />
         </shape>
     </item>
 
